--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
 }
-.search-container {
+.search-by-city,
+.search-by-zip {
   background-color: whitesmoke;
   margin: 20px;
   display: flex;
