--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -3,6 +3,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.search-type {
+  display: flex;
+  flex-direction: row;
+}
+
 .search-by-city,
 .search-by-zip {
   background-color: whitesmoke;
