--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container">
   <div class="search-type">
-    <div class="search-by-city">
+    <!-- <div class="search-by-city">
       <input
         type="text"
         id="city"
@@ -11,8 +11,9 @@
         [(ngModel)]="cityInput"
       />
       <button (click)="searchByCity()">Search</button>
-    </div>
+    </div> -->
     <div class="search-by-zip">
+      Search By Zip Code
       <input
         type="text"
         id="zip"
