--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -4,12 +4,12 @@
   align-items: center;
 }
 
-.search-type {
+/* .search-type {
   display: flex;
   flex-direction: row;
-}
+} */
 
-.search-by-city,
+/* .search-by-city, */
 .search-by-zip {
   background-color: whitesmoke;
   margin: 20px;
@@ -18,7 +18,7 @@
   justify-content: center;
   padding: 20px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  width: 30%;
+  width: 50vw;
   border-radius: 8px;
 }
 
