--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,24 +2,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 30px;
 }
 
-/* .search-type {
+.search-type {
   display: flex;
-  flex-direction: row;
-} */
+  justify-content: center;
+  width: 300px;
+  font-size: 20px;
+}
 
-/* .search-by-city, */
+.search-by-city,
 .search-by-zip {
-  background-color: whitesmoke;
+  background-color: white;
   margin: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 20px;
+  padding: 25px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   width: 50vw;
   border-radius: 8px;
+}
+
+input {
+  font-size: 15px;
+  padding: 5px;
+  margin-top: 3px;
 }
 
 #city {
@@ -31,20 +40,31 @@ button {
   border-radius: 3px;
   border: 1px solid gray;
   margin: 15px;
+  padding: 5px;
 }
+
 button:hover {
   background-color: rgb(227, 237, 251);
+  color: blue;
+  font-weight: bold;
+  transition: 0.2s;
 }
 
 .weather-results {
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 40px;
   margin: 20px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 8px;
 }
+
+h2 {
+  margin-top: 15px;
+  padding: 10px;
+}
+
 .city-and-icon {
   display: flex;
   align-items: center;
