--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -35,11 +35,12 @@ input {
   border-radius: 3px;
   border: 1px solid gray;
 }
+
 button {
   background-color: white;
   border-radius: 3px;
   border: 1px solid gray;
-  margin: 15px;
+  margin-top: 20px;
   padding: 5px;
 }
 
